# homegear-nodes-optional

./: .gitignore  CMakeLists.txt  buildPackages.sh
apple-tv/: README.md  apple-tv.hni  apple-tv.py  createDebianPackage.sh
apple-tv/debian/: control  copyright  postinst  rules
backup/: backup.hni  backup.php  createDebianPackage.sh
backup/debian/: control  copyright  rules
crestron-serial/: CMakeLists.txt  Makefile.am  configure.ac  createDebianPackage.sh  crestron.ai  getVersion.sh
crestron-serial/crestron-serial-in/: CrestronSerialIn.cpp  CrestronSerialIn.h  Factory.cpp  Factory.h  crestron-serial-in.hni
crestron-serial/crestron-serial-in/locales/de-DE/: crestron-serial-in  crestron-serial-in.help.html
crestron-serial/crestron-serial-in/locales/en-US/: crestron-serial-in  crestron-serial-in.help.html
crestron-serial/crestron-serial-out/: CrestronSerialOut.cpp  CrestronSerialOut.h  Factory.cpp  Factory.h  crestron-serial-out.hni
crestron-serial/crestron-serial-out/locales/de-DE/: crestron-serial-out  crestron-serial-out.help.html
crestron-serial/crestron-serial-out/locales/en-US/: crestron-serial-out  crestron-serial-out.help.html
crestron-serial/crestron-serial-port/: CrestronSerialPort.cpp  CrestronSerialPort.h  Factory.cpp  Factory.h  SerialReaderWriter.cpp  SerialReaderWriter.h  crestron-serial-port.hni
crestron-serial/crestron-serial-port/locales/de-DE/: crestron-serial-port  crestron-serial-port.help.html
crestron-serial/crestron-serial-port/locales/en-US/: crestron-serial-port  crestron-serial-port.help.html
crestron-serial/debian/: control  copyright  rules
dummy/: README.md  createDebianPackage.sh
dummy/debian/: control  copyright  rules
fritzbox/: createDebianPackage.sh  fritzbox-callmonitor.hni  fritzbox-callmonitor.s.php
fritzbox-callmonitor/: createDebianPackage.sh  fritzbox-callmonitor.hni  fritzbox-callmonitor.php  fritzbox-callmonitor.s.php
ftp/: CreateDebianPackage.sh  createDebianPackage.sh  ftp-server.hni  ftp-server.s.php  ftp.hni  ftp.php
miele/: README.md  createDebianPackage.sh  miele.classes.php  miele.hni  miele.s.php
mysql/: createDebianPackage.sh  mysql-server.hni  mysql-server.s.php  mysql.hni  mysql.s.php
pjlink/: README.md  createDebianPackage.sh  pjlink.hni  pjlink.php
pushover/: createDebianPackage.sh  pushover.hni  pushover.php
slack/: createDebianPackage.sh  slack.hni  slack.php
squeezebox/: README.md  createDebianPackage.sh  squeezebox.hni  squeezebox.php
telegram/: createDebianPackage.sh  telegram.hni  telegram.php
telegram-bot/: README.md  createDebianPackage.sh  telegram-bot.classes.php  telegram-bot.hni  telegram-bot.s.php
tvheadend/: README.md  createDebianPackage.sh  tvheadend.hni  tvheadend.php
variable-profiles/: README.md  createDebianPackage.sh  variable-profiles.hni  variable-profiles.php
(+72 files in other folders)
